--- a/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
+++ b/pppppp/View/TimelineView/TimelinePostCell/TimelinePostCollectionViewCell.xib
@@ -23,38 +23,38 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mph-eG-fuZ">
-                        <rect key="frame" x="309.66666666666669" y="10" width="40.333333333333314" height="14"/>
-                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="12"/>
+                        <rect key="frame" x="302.66666666666669" y="16" width="47.333333333333314" height="17"/>
+                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="14"/>
                         <color key="textColor" name="white50"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPm-nM-2Z8">
-                        <rect key="frame" x="111.99999999999999" y="16" width="51.333333333333329" height="24"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        <rect key="frame" x="96" y="20" width="41.333333333333343" height="20.333333333333329"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NlN-dq-lcz">
-                        <rect key="frame" x="16" y="16" width="72" height="72"/>
+                        <rect key="frame" x="16" y="20" width="64" height="64"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="72" id="bHw-1p-5iP"/>
-                            <constraint firstAttribute="width" constant="72" id="gGL-M1-ida"/>
+                            <constraint firstAttribute="height" constant="64" id="bHw-1p-5iP"/>
+                            <constraint firstAttribute="width" constant="64" id="gGL-M1-ida"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZW-UM-4eA">
-                        <rect key="frame" x="206.66666666666666" y="63.666666666666664" width="67.333333333333343" height="24.333333333333336"/>
-                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="20"/>
+                        <rect key="frame" x="200" y="57.999999999999993" width="74" height="26.666666666666664"/>
+                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="22"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7K-qn-CU9">
-                        <rect key="frame" x="112" y="64" width="49" height="24"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                        <rect key="frame" x="96" y="58.666666666666664" width="54.666666666666657" height="25.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NmF-c3-SC5">
-                        <rect key="frame" x="314" y="64" width="24" height="24"/>
+                        <rect key="frame" x="314" y="59.333333333333343" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="MMY-u2-1eh"/>
                             <constraint firstAttribute="height" constant="24" id="m4e-py-5jB"/>
@@ -75,7 +75,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8W-xA-pNZ">
-                        <rect key="frame" x="340" y="66" width="10" height="20"/>
+                        <rect key="frame" x="340" y="61.333333333333343" width="10" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -88,21 +88,21 @@
                 <constraint firstItem="Q8W-xA-pNZ" firstAttribute="leading" secondItem="NmF-c3-SC5" secondAttribute="trailing" constant="2" id="53F-gD-mx7"/>
                 <constraint firstItem="NlN-dq-lcz" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="5f7-EI-5ND"/>
                 <constraint firstItem="NlN-dq-lcz" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="9xf-zp-CZz"/>
+                <constraint firstItem="hZW-UM-4eA" firstAttribute="centerY" secondItem="NmF-c3-SC5" secondAttribute="centerY" id="BVZ-pt-K0i"/>
                 <constraint firstItem="NmF-c3-SC5" firstAttribute="leading" secondItem="hZW-UM-4eA" secondAttribute="trailing" constant="40" id="BW9-tK-IJv"/>
-                <constraint firstItem="mph-eG-fuZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="BvN-6w-APD"/>
-                <constraint firstItem="HPm-nM-2Z8" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="24" id="LfP-sO-cGj"/>
+                <constraint firstItem="HPm-nM-2Z8" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="16" id="LfP-sO-cGj"/>
                 <constraint firstItem="N7K-qn-CU9" firstAttribute="centerY" secondItem="hZW-UM-4eA" secondAttribute="centerY" id="Nqq-Ua-PiG"/>
                 <constraint firstItem="NlN-dq-lcz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="OFv-Jj-dN0"/>
                 <constraint firstAttribute="trailing" secondItem="Q8W-xA-pNZ" secondAttribute="trailing" constant="16" id="PVZ-Ex-JFI"/>
+                <constraint firstItem="NlN-dq-lcz" firstAttribute="top" secondItem="HPm-nM-2Z8" secondAttribute="top" id="VO2-rJ-KzR"/>
                 <constraint firstAttribute="trailing" secondItem="qvb-BC-HpF" secondAttribute="trailing" id="WNC-0u-lVy"/>
-                <constraint firstItem="N7K-qn-CU9" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="24" id="afq-2s-bvK"/>
+                <constraint firstItem="N7K-qn-CU9" firstAttribute="leading" secondItem="NlN-dq-lcz" secondAttribute="trailing" constant="16" id="afq-2s-bvK"/>
+                <constraint firstItem="mph-eG-fuZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="cjz-qu-CQr"/>
                 <constraint firstAttribute="bottom" secondItem="qvb-BC-HpF" secondAttribute="bottom" id="dpt-tU-s7j"/>
-                <constraint firstAttribute="bottom" secondItem="hZW-UM-4eA" secondAttribute="bottom" constant="16" id="e60-n4-aGv"/>
                 <constraint firstItem="qvb-BC-HpF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="gOc-pb-IgC"/>
+                <constraint firstItem="NlN-dq-lcz" firstAttribute="bottom" secondItem="N7K-qn-CU9" secondAttribute="bottom" id="heW-gg-pUS"/>
                 <constraint firstAttribute="trailing" secondItem="mph-eG-fuZ" secondAttribute="trailing" constant="16" id="kck-Wf-tl2"/>
                 <constraint firstItem="NmF-c3-SC5" firstAttribute="centerY" secondItem="Q8W-xA-pNZ" secondAttribute="centerY" id="oaM-cN-dWN"/>
-                <constraint firstItem="HPm-nM-2Z8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="u6T-GK-kGR"/>
-                <constraint firstAttribute="bottom" secondItem="NmF-c3-SC5" secondAttribute="bottom" constant="16" id="zle-uz-BoL"/>
             </constraints>
             <size key="customSize" width="366" height="104"/>
             <connections>
