--- a/pppppp/View/SettingsView/SetGoalWeightView/SetGoalWeightView.storyboard
+++ b/pppppp/View/SettingsView/SetGoalWeightView/SetGoalWeightView.storyboard
@@ -11,7 +11,7 @@
         <!--Set Goal Weight View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="SetGoalWeightViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="Y6W-OH-hqX" customClass="SetGoalWeightViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
